--- a/paper/noisy_kids.bib
+++ b/paper/noisy_kids.bib
@@ -1,13 +1,114 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-
-%% Created for Dan Yurovsky at 2015-10-01 09:56:43 -0700 
+%% Created for Daniel Yurovsky at 2016-05-22 15:05:20 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{kidd2005,
+	Author = {Kidd, Evan and Bavin, Edith L},
+	Date-Added = {2016-05-22 22:05:19 +0000},
+	Date-Modified = {2016-05-22 22:05:20 +0000},
+	Journal = {Journal of Child Language},
+	Month = dec,
+	Number = {4},
+	Pages = {855--876},
+	Title = {{Lexical and referential cues to sentence interpretation: an investigation of children's interpretations of ambiguous sentences}},
+	Volume = {32},
+	Year = {2005}}
+
+@article{nardini2010,
+	Author = {Nardini, M and Bedford, R and Mareschal, Denis},
+	Date-Added = {2016-05-20 20:30:02 +0000},
+	Date-Modified = {2016-05-20 20:30:03 +0000},
+	Journal = {Proceedings of the National Academy of Sciences},
+	Number = {39},
+	Pages = {17041--17046},
+	Title = {{Fusion of visual cues is not mandatory in children}},
+	Volume = {107},
+	Year = {2010}}
+
+@article{snedeker2004,
+	Author = {Snedeker, Jesse and Trueswell, John C},
+	Date-Added = {2016-05-20 20:29:32 +0000},
+	Date-Modified = {2016-05-20 20:29:32 +0000},
+	Journal = {Cognitive Psychology},
+	Month = nov,
+	Number = {3},
+	Pages = {238--299},
+	Title = {{The developing constraints on parsing decisions: The role of lexical-biases and referential scenes in child and adult sentence processing}},
+	Volume = {49},
+	Year = {2004}}
+
+@article{rabagliati2013,
+	Author = {Rabagliati, Hugh and Pylkk{\"a}nen, Liina and Marcus, Gary F},
+	Date-Added = {2016-05-20 20:19:55 +0000},
+	Date-Modified = {2016-05-20 20:19:56 +0000},
+	Journal = {Developmental Psychology},
+	Number = {6},
+	Pages = {1076--1089},
+	Title = {{Top-down influence in young children's linguistic ambiguity resolution.}},
+	Volume = {49},
+	Year = {2013}}
+
+@article{gori2008,
+	Author = {Gori, Monica and Del Viva, Michela and Sandini, Giulio and Burr, David C},
+	Date-Added = {2016-05-20 20:17:27 +0000},
+	Date-Modified = {2016-05-20 20:17:28 +0000},
+	Journal = {Current Biology},
+	Month = may,
+	Number = {9},
+	Pages = {694--698},
+	Title = {{Young Children Do Not Integrate Visual and Haptic Form Information}},
+	Volume = {18},
+	Year = {2008}}
+
+@article{nardini2008,
+	Author = {Nardini, Marko and Jones, Peter and Bedford, Rachael and Braddick, Oliver},
+	Date-Added = {2016-05-20 20:16:45 +0000},
+	Date-Modified = {2016-05-20 20:16:46 +0000},
+	Journal = {Current Biology},
+	Month = may,
+	Number = {9},
+	Pages = {689--693},
+	Title = {{Development of Cue Integration in Human Navigation}},
+	Volume = {18},
+	Year = {2008}}
+
+@article{graham2014,
+	Author = {Graham, S A and Sedivy, J and Khu, M},
+	Date-Added = {2016-05-20 20:14:51 +0000},
+	Date-Modified = {2016-05-20 20:14:53 +0000},
+	Journal = {Journal of Child Language},
+	Pages = {34--50},
+	Title = {{That's not what you said earlier: preschoolers expect partners to be referentially consistent}},
+	Volume = {41},
+	Year = {2014}}
+
+@article{matthews2010,
+	Author = {Matthews, Danielle and Lieven, Elena and Tomasello, Michael},
+	Date-Added = {2016-05-20 20:13:21 +0000},
+	Date-Modified = {2016-05-20 20:13:22 +0000},
+	Journal = {Developmental Psychology},
+	Number = {4},
+	Pages = {749--760},
+	Title = {{What's in a manner of speaking? Children's sensitivity to partner-specific referential precedents.}},
+	Volume = {46},
+	Year = {2010}}
+
+@article{pasquini2007,
+	Author = {Pasquini, Elisabeth S and Corriveau, Kathleen H and Koenig, Melissa and Harris, Paul L},
+	Date-Added = {2016-05-20 18:04:39 +0000},
+	Date-Modified = {2016-05-20 18:04:40 +0000},
+	Journal = {Developmental Psychology},
+	Number = {5},
+	Pages = {1216--1226},
+	Title = {{Preschoolers monitor the relative accuracy of informants.}},
+	Volume = {43},
+	Year = {2007}}
 
 @article{lew-williams2007,
 	Author = {Lew-Williams, Casey and Fernald, Anne},
