--- a/noisy_kids_analysis.Rmd
+++ b/noisy_kids_analysis.Rmd
@@ -1,19 +1,25 @@
 ---
-title: "Adults and preschoolers flexibly adapt to noisy linguistic input"
+title: "Preschoolers flexibly adapt to linguistic input in a noisy channel"
 author: "Daniel Yurovsky, Sarah Case, & Michael C. Frank"
-date: "September 17, 2015"
+date: "`r Sys.Date()`"
+theme: spacelab
 output:
   html_document:
-  highlight: tango
-theme: spacelab
+    highlight: tango
+    theme: cosmo
+    code_folding: show
+    toc: true
+    toc_float: true
+    collapsed: false
 ---
-```{r setup, include=FALSE}
+
+```{r setup, include = FALSE}
 library(knitr)
 options(scipen = 1, digits = 3)
-opts_chunk$set(message=FALSE, warning=FALSE)
+opts_chunk$set(message=FALSE, warning=FALSE, fig.align = "center")
 ```
 
-```{r, cache = FALSE, include = FALSE}
+```{r load_libraries, cache = FALSE, include = FALSE}
 library(dplyr)
 library(langcog)
 library(tidyr)
@@ -26,43 +32,67 @@ library(ggplot2)
 library(readr)
 library(jsonlite)
 library(compute.es)
+library(broom)
+library(purrr)
 
 colors <- c("#e41a1c", "#377eb8", "#4daf4a")
 ```
 
-```{r tab_func, include = FALSE} 
-kable_table <- function(lmer_results, predictors) {
+```{r helper_func, include = FALSE} 
+# Cleans up an lmer output for pretty printing
+tidy_lmer <- function(lmer_results, predictors = NA) {
   
-  table <- as.data.frame(summary(lmer_results)$coef) %>%
-    mutate(Predictor = predictors) %>%
+  tidy(lmer_results) %>%
+    filter(group == "fixed") %>%
+    select(-group) %>%
+    mutate(term = ifelse(!is.na(predictors), predictors, term)) %>%
     rowwise() %>%
-    mutate(stars = get_stars(`Pr(>|z|)`)) %>%
+    mutate(stars = get_stars(p.value)) %>%
     ungroup() %>%
-    mutate(`Pr(>|z|)` = sprintf("%.3f", `Pr(>|z|)`)) %>%
-    mutate(`Pr(>|z|)` = ifelse(`Pr(>|z|)` == "0.000", "< .001", `Pr(>|z|)`)) %>%
-    select(Predictor, Estimate, `Std. Error`, `z value`, `Pr(>|z|)`, stars) %>%
-    rename(`$z$ value` = `z value`,
-           `$p$ value` = `Pr(>|z|)`)
+    mutate(p.value = sprintf("%.3f", p.value),
+           p.value = ifelse(p.value == "0.000", "< .001", p.value)) %>%
+    select(term, estimate, std.error, statistic, p.value, stars) %>%
+    rename(`$z$ value` = statistic,
+           `$p$ value` = p.value,
+           `std. error` = std.error)
+}
+
+#Compute effect sizes for means in a dataframe
+mes_df <- function(df) {
+  summary_df <- df %>%
+    group_by(condition) %>%
+    summarise(mean = mean(response),
+            sd = sd(response),
+            n = n())
   
-  rownames(table) <- NULL
-  names(table)[6] <- ""
+  es <- mes(summary_df$mean[2], summary_df$mean[1], summary_df$sd[2],
+             summary_df$sd[1], summary_df$n[2], summary_df$n[1], verbose = FALSE) %>%
+    mutate(condition = summary_df[2,"condition"])
   
-  kable(table)
+  if(nrow(summary_df) == 3) {
+      es <- bind_rows(es,
+                      mes(summary_df$mean[3], summary_df$mean[1], summary_df$sd[3],
+                          summary_df$sd[1], summary_df$n[3], summary_df$n[1], 
+                          verbose = FALSE)) %>%
+        mutate(condition = unlist(summary_df[2:3, "condition"], use.names = FALSE))
+  }
+  
+  data.frame(d = es$d, ci_lower = es$l.d, ci_upper = es$u.d, condition = es$condition)
 }
 ```
 
-<h2> Experiment 1 </h2>
+## Experiment 1 ##
 
-<h3> Load data </h3>
-```{r load_exp1, cache=FALSE}
+Load data
+```{r load_exp1, cache = FALSE}
 exp1_child_data <- read_csv("data/exp1_child.csv")
 exp1_adult_data <- read_csv("data/exp1_adult.csv")
 
-exp1_data <- bind_rows(exp1_child_data,exp1_adult_data) %>%
+exp1_data <- bind_rows(exp1_child_data, exp1_adult_data) %>%
   mutate(response = factor(response, levels = c("Implausible", "Plausible")))
 ```
 
-<h3>Munge experiment data</h3>
+Munge data
 ```{r munge_exp1}
 child_demo_data <- exp1_child_data %>%
   distinct(subject) %>%
@@ -93,22 +123,37 @@ kable(adult_demo_data,
       caption = "Adult demographic data")
 ```
 
-<h3> Analyze exposure trials </h3>
+<h3> Exposure trials </h3>
 ```{r exp1_exposure}
-exp1_exposure_chance_lm <- glmer(response ~ 0 + group : condition + (1|word) + (1|subject), 
-                          family = "binomial",
-                          data = filter(exp1_data,trial_type == "Exposure"))
+exp1_group_exposure <- exp1_data %>%
+  filter(trial_type == "Exposure") %>%
+  group_by(group) %>%
+  nest() %>%
+  mutate(model = map(data, ~ glmer(response ~ condition + (1|word) +
+                            (1|subject), family = "binomial", data = .))) %>%
+  unnest(model %>% map(function(x) tidy_lmer(x, c("Intercept", "Plausible")))) %>%
+  arrange(group)
 
-kable_table(exp1_exposure_chance_lm, c("Adults, Implausible", 
-                                       "Children, Implausible", 
-                                       "Adults, Plausible", 
-                                       "Children, Plausible"))
+kable(exp1_group_exposure)
+
+exp1_exposure_es <- exp1_data %>%
+  filter(trial_type == "Exposure") %>%
+  mutate(response = as.numeric(response) - 1) %>%
+  group_by(group, condition, subject) %>%
+  summarise(response = mean(response)) %>%
+  group_by(condition) %>%
+  split(.$group) %>%
+  map(mes_df) %>%
+  bind_rows(.id = "group")
+
+kable(exp1_exposure_es)
 
 exp1_exposure_lm <- glmer(response ~ group * condition + (1|word) + (1|subject), 
                           family = "binomial",
                           data = filter(exp1_data,trial_type == "Exposure"))
-kable_table(exp1_exposure_lm, c("Intercept", "Children", "Plausible", 
-                                "Children x Plausible"))
+
+kable(tidy_lmer(exp1_exposure_lm, c("Intercept", "Children",  "Plausible", 
+                                "Children x Plausible")))
 ```
 
 ```{r exp1_exposure_plots, fig.width=6, fig.height=4}
@@ -119,7 +164,7 @@ ggplot(filter(exp1_group_data,trial_type == "Exposure"),
   geom_linerange(aes(ymin = ci_lower,
                       ymax = ci_upper),
                   size = .8,
-                  show_guide = FALSE,
+                  show.legend = FALSE,
                  position=position_dodge(1)) +
   scale_fill_manual(values = colors) +
   geom_hline(aes(yintercept=.5),lty=2)+
@@ -130,28 +175,37 @@ ggplot(filter(exp1_group_data,trial_type == "Exposure"),
                      limits=c(0,1))
 ```
 
-<h3> Analyze Test trials </h3>
+<h3>Test trials </h3>
 ```{r exp1_test}
-exp1_test_lm <- glmer(response ~ group * condition + (1|word) + (1|subject), 
-                          family = "binomial",
-                          data = filter(exp1_data,trial_type == "Test"))
-kable_table(exp1_test_lm, c("Intercept", "Children", "Plausible", 
-                                "Children x Plausible"))
+exp1_group_test <- exp1_data %>%
+  filter(trial_type == "Test") %>%
+  group_by(group) %>%
+  nest() %>%
+  mutate(model = map(data, ~ glmer(response ~ condition + (1|word) +
+                            (1|subject), family = "binomial", data = .))) %>%
+  unnest(model %>% map(function(x) tidy_lmer(x, c("Intercept", "Plausible")))) %>%
+  arrange(group)
 
-exp1_es <- exp1_data %>%
+kable(exp1_group_test)
+
+exp1_test_es <- exp1_data %>%
   filter(trial_type == "Test") %>%
   mutate(response = as.numeric(response) - 1) %>%
   group_by(group, condition, subject) %>%
   summarise(response = mean(response)) %>%
-  summarise(mean = mean(response),
-            sd = sd(response),
-            n = n()) %>%
-  group_by(group) %>%
-  summarise(d = mes(mean[2],mean[1],sd[2],sd[1],n[2],n[1], verbose = FALSE)$d)
+  group_by(condition) %>%
+  split(.$group) %>%
+  map(mes_df) %>%
+  bind_rows(.id = "group")
 
-kable(exp1_es, caption = "Effect sizes for adults and children", 
-      column.names = c("group", "Cohen's $d$"))
+kable(exp1_test_es)
 
+exp1_test_lm <- glmer(response ~ group * condition + (1|word) + (1|subject), 
+                          family = "binomial",
+                          data = filter(exp1_data,trial_type == "Test"))
+
+kable(tidy_lmer(exp1_test_lm, c("Intercept", "Children", "Plausible", 
+                            "Children x Plausible")))
 ```
 
 ```{r exp1_test_plots, fig.width=6,fig.height=4}
@@ -163,7 +217,7 @@ ggplot(filter(exp1_group_data,trial_type == "Test"),
   geom_linerange(aes(ymin = ci_lower,
                       ymax = ci_upper),
                   size = .8,
-                  show_guide = FALSE,
+                  show.legend = FALSE,
                  position=position_dodge(1)) +
   scale_fill_manual(values = colors) +
   geom_hline(aes(yintercept=.5),lty=2)+
@@ -176,19 +230,200 @@ ggplot(filter(exp1_group_data,trial_type == "Test"),
 
 ***
 
-<h2> Experiment 2 </h2>
+## Experiment 2 ##
 
-<h3> Load data </h3>
+Load data
 ```{r load_exp2, cache=FALSE}
-exp2_child_data <- read_csv("data/exp2_child.csv") %>%
+exp2_data <- read_csv("data/exp2.csv") %>%
   mutate(response = factor(response, levels = c("Implausible", "Plausible")),
-         condition = factor(condition, levels = c("Implausible", "Plausible", "Control"),
-                            labels = c("Implausible", "Plausible", "Implausible (Control)")))
+         age_group = floor(age))
 ```
 
-<h3>Munge experiment 2 data</h3>
+Munge data
 ```{r munge_exp2}
-exp2_demo_data <- exp2_child_data %>%
+exp2_indiv_data <- exp2_data %>%
+  distinct(subject)
+  
+exp2_low_english <- exp2_indiv_data %>%
+  filter(english <= 25) %>%
+  nrow()
+
+exp2_demo_data <- exp2_indiv_data %>%
+  filter(english > 25) %>%
+  group_by(condition, age_group) %>%
+  summarise(n = n(),
+            num_girls = sum(sex == "female"),
+            min_age = min(age),
+            mean_age = mean(age),
+            max_age = max(age))
+
+exp2_group_data <- exp2_data %>%
+  mutate(response = as.numeric(response) - 1) %>%
+  group_by(age_group, condition, trial_type) %>%
+  multi_boot_standard("response", na.rm = T)
+  
+kable(exp2_demo_data,
+      col.names = c("Speaker Condition", "Age Group", "Num Participants",
+                    "Num Girls","Min Age","Mean Age","Max. Age"),
+      caption = "Child demographic data")
+```
+
+<h3> Exposure trials </h3>
+```{r exp2_exposure}
+exp2_age_group_exposure <- exp2_data %>%
+  filter(trial_type == "Exposure") %>%
+  group_by(age_group) %>%
+  nest() %>%
+  mutate(model = map(data, ~ glmer(response ~ condition + (1|word) +
+                            (1|subject), family = "binomial", data = .))) %>%
+  unnest(model %>% map(function(x) tidy_lmer(x, c("Intercept", "Plausible")))) %>%
+  arrange(age_group)
+
+kable(exp2_age_group_exposure)
+
+exp2_exposure_es <- exp2_data %>%
+  filter(trial_type == "Exposure") %>%
+  mutate(response = as.numeric(response) - 1) %>%
+  group_by(age_group, condition, subject) %>%
+  summarise(response = mean(response)) %>%
+  group_by(condition) %>%
+  split(.$age_group) %>%
+  map(mes_df) %>%
+  bind_rows(.id = "age_group")
+
+kable(exp2_exposure_es)
+
+exp2_exposure_lm <- glmer(response ~ age * condition + (1|word) +
+                            (1|subject), family = "binomial",
+                          data = filter(exp2_data,trial_type == "Exposure"))
+
+kable(tidy_lmer(exp2_exposure_lm, c("Intercept", "Age",  "Plausible", 
+                                "Age x Plausible")))
+```
+
+```{r exp2_exposure_plots, fig.width=6, fig.height=4}
+ggplot(filter(exp2_group_data,trial_type == "Exposure"), 
+       aes(x=condition, y=mean, fill=as.factor(age_group))) +
+  facet_grid(. ~ age_group) +
+  geom_bar(stat="identity",position=position_dodge(1))+
+  geom_linerange(aes(ymin = ci_lower,
+                      ymax = ci_upper),
+                  size = .8,
+                  show.legend = FALSE,
+                 position=position_dodge(1)) +
+  scale_fill_manual(values = colors) +
+  geom_hline(aes(yintercept=.5),lty=2)+
+  theme_bw(base_size=14) +
+  theme(legend.position="none", panel.grid=element_blank()) +
+  scale_x_discrete(name = "\nSpeaker Condition")+
+  scale_y_continuous(name = "Proportion Choosing Plausible",
+                     limits=c(0,1))
+```
+
+<h3> Test trials </h3>
+```{r exp2_test}
+exp2_age_group_test <- exp2_data %>%
+  filter(trial_type == "Test") %>%
+  group_by(age_group) %>%
+  nest() %>%
+  mutate(model = map(data, ~ glmer(response ~ condition + (1|word) +
+                            (1|subject), family = "binomial", data = .))) %>%
+  unnest(model %>% map(function(x) tidy_lmer(x, c("Intercept", "Plausible")))) %>%
+  arrange(age_group)
+
+kable(exp2_age_group_test)
+
+exp2_test_es <- exp2_data %>%
+  filter(trial_type == "Test") %>%
+  mutate(response = as.numeric(response) - 1) %>%
+  group_by(age_group, condition, subject) %>%
+  summarise(response = mean(response)) %>%
+  group_by(condition) %>%
+  split(.$age_group) %>%
+  map(mes_df) %>%
+  bind_rows(.id = "age_group")
+
+kable(exp2_test_es)
+
+exp2_test_lm <- glmer(response ~ age * condition + (1|word) + (1|subject), 
+                          family = "binomial",
+                          data = filter(exp2_data,trial_type == "Test"))
+
+kable(tidy_lmer(exp2_test_lm, c("Intercept", "Age", "Plausible", 
+                            "Age x Plausible")))
+```
+
+```{r exp2_test_plots, fig.width=8,fig.height=4}
+#quartz(width=8,height=4)
+ggplot(filter(exp2_group_data, trial_type == "Test"), 
+       aes(x = condition, y=mean, fill=as.factor(age_group))) +
+  facet_grid(. ~ age_group, 
+             labeller=as_labeller(function(value) sprintf("%s-years", value))) +
+  geom_bar(stat="identity",position=position_dodge(1))+
+  geom_linerange(aes(ymin = ci_lower,
+                      ymax = ci_upper),
+                  size = .8,
+                  show.legend = FALSE,
+                 position=position_dodge(1)) +
+  scale_fill_manual(values = colors) +
+  geom_hline(aes(yintercept=.5),lty=2)+
+  theme_bw(base_size=14) +
+  theme(legend.position="none", panel.grid=element_blank()) +
+  scale_x_discrete(name = "\nSpeaker Condition")+
+  scale_y_continuous(name = "Proportion Choosing Plausible",
+                     limits=c(0,1))
+```
+
+<h3> Exposure predicts test </h3> 
+```{r e2_exposure_test}
+exp2_bykid_data <- exp2_data %>%
+  filter(trial_type == "Exposure") %>%
+  group_by(age, age_group, condition, subject) %>%
+  summarise(Exposure = mean(response == "Plausible")) %>%
+  left_join(filter(exp2_data, trial_type == "Test"))
+
+exp2_bykid_lmer <- glmer(response ~  age + condition * Exposure + (1|subject) +
+                      (1|word), family = "binomial", data = exp2_bykid_data,
+                    control=glmerControl(optimizer="bobyqa",
+                                         optCtrl=list(maxfun=2e5)))
+
+kable(tidy_lmer(exp2_bykid_lmer, c("Intercept", "Age", "Plausible", 
+                              "Exposure", "Plausible x Exposure")))
+```
+
+```{r exp2_exposure_test_cor, fig.width = 8, fig.height = 4}
+exp2_cor_data <- exp2_bykid_data %>%
+  group_by(age, Exposure, condition, subject) %>%
+  summarise(Test = mean(response == "Plausible")) 
+
+ggplot(aes(x = Exposure, y = Test, color = age), data = exp2_cor_data) +
+  facet_grid(~ condition) + 
+  geom_jitter() + 
+  geom_smooth(method = "lm") +
+  theme_bw(base_size=14) +
+  theme(panel.grid=element_blank()) +
+  scale_x_continuous(name = "\nExposure Proportion plausible",
+                   limits = c(-.1, 1.1), breaks = seq(0, 1, .2)) +
+  scale_y_continuous(name = "Test Proportion plausible",
+                     limits=c(-.1, 1.1), breaks = seq(0, 1, .2))
+```
+
+***
+
+## Experiment 3 ##
+
+Load data
+```{r load_exp3, cache=FALSE}
+exp3_data <- read_csv("data/exp3.csv") %>%
+  mutate(response = factor(response, levels = c("Implausible", "Plausible")),
+         condition = factor(condition, levels = c("Implausible", "Plausible", "Control"),
+                            labels = c("Implausible", "Plausible", 
+                                       "Implausible (Control)")))
+```
+
+Munge data
+```{r munge_exp3}
+exp3_demo_data <- exp3_data %>%
   distinct(subject) %>%
   group_by(condition, noise) %>%
   summarise(n = n(),
@@ -197,49 +432,63 @@ exp2_demo_data <- exp2_child_data %>%
             mean_age = mean(age),
             max_age = max(age))
 
-kable(exp2_demo_data,
+kable(exp3_demo_data,
       col.names = c("Speaker Condition", "Noise Level", "Num Participants",
                     "Num Girls","Min Age","Mean Age","Max. Age"))
 
 
-exp2_group_data <- exp2_child_data %>%
+exp3_group_data <- exp3_data %>%
   mutate(response = as.numeric(response)-1) %>%
   group_by(group,condition,noise,trial_type) %>%
   multi_boot_standard("response", na.rm = T)
 ```
 
-<h3>Analyze exposure trials</h3>
-```{r exp2_exposure}
-exp2_exposure_chance_lm <- glmer(response ~ 0 + noise:condition + 
-                                   (1|word) + (1|subject), family = "binomial",
-                          data = filter(exp2_child_data,trial_type == "Exposure"))
+<h3> Exposure trials </h3>
+```{r exp3_exposure}
+exp3_group_exposure <- exp3_data %>%
+  filter(trial_type == "Exposure") %>%
+  group_by(noise) %>%
+  nest() %>%
+  mutate(model = map(data, ~ glmer(response ~ condition + (1|word) +
+                            (1|subject), family = "binomial", data = .))) %>%
+  unnest(map2(model, list(c("Intercept", "Plausible", "Implausible (Control)"), 
+                       c("Intercept", "Plausible")), 
+              function(x,y) tidy_lmer(x, y))) %>%
+  arrange(noise)
 
-kable_table(exp2_exposure_chance_lm, c("No Noise, Implausible", 
-                                       "Noisy, Implausible", 
-                                       "No Noise, Plausible", 
-                                       "Noisy, Plausible",
-                                       "Noisy, Implausible (Control)"))
 
-exp2_exposure_lm <- glmer(response ~ condition * noise + (1|word) + (1|subject), 
-                          family = "binomial",
-                          data = filter(exp2_child_data,trial_type == "Exposure"))
+kable(exp3_group_exposure)
 
-kable_table(exp2_exposure_lm, c("Intercept", 
-                                       "Plausible", 
-                                       "Implausible (Control)", 
-                                       "Noisy",
-                                       "Plausible x Noisy"))
+exp3_exposure_es <- exp3_data %>%
+  filter(trial_type == "Exposure") %>%
+  mutate(response = as.numeric(response) - 1) %>%
+  group_by(noise, condition, subject) %>%
+  summarise(response = mean(response)) %>%
+  group_by(condition) %>%
+  split(.$noise) %>%
+  map(mes_df) %>%
+  bind_rows(.id = "noise")
+
+kable(exp3_exposure_es)
+
+exp3_exposure_lm <- glmer(response ~ noise * condition + (1|word) +
+                            (1|subject), family = "binomial",
+                          data = filter(exp3_data,trial_type == "Exposure"))
+
+kable(tidy_lmer(exp3_exposure_lm, c("Intercept", "Plausible", 
+                                    "Implausible (Control)", 
+                                    "Noisy", "Plausible x Noisy")))
 ```
 
-```{r exp2_exposure_plots, fig.width=7.5,fig.height=4}
-ggplot(filter(exp2_group_data,trial_type == "Exposure"), 
+```{r exp3_exposure_plots, fig.width=7.5,fig.height=4}
+ggplot(filter(exp3_group_data,trial_type == "Exposure"), 
        aes(x=condition, y=mean, fill=group)) +
   facet_grid(. ~ noise) +
   geom_bar(stat="identity",position=position_dodge(1))+
   geom_linerange(aes(ymin = ci_lower,
                       ymax = ci_upper),
                   size = .8,
-                  show_guide = FALSE,
+                  show.legend = FALSE,
                  position=position_dodge(1)) +
   scale_fill_manual(values = colors[2:3]) +
   geom_hline(aes(yintercept=.5),lty=2)+
@@ -250,21 +499,49 @@ ggplot(filter(exp2_group_data,trial_type == "Exposure"),
                      limits=c(0,1))
 ```
 
-<h3>Analyze test trials</h3>
-```{r exp2_test}
-exp2_test_lm <- glmer(response ~ noise * condition + (1|word) + (1|subject), 
+<h3>Test trials</h3>
+```{r exp3_test}
+exp3_group_test <- exp3_data %>%
+  filter(trial_type == "Test") %>%
+  group_by(noise) %>%
+  nest() %>%
+  mutate(model = map(data, ~ glmer(response ~ condition + (1|word) +
+                            (1|subject), family = "binomial", data = .))) %>%
+  unnest(map2(model, list(c("Intercept", "Plausible", "Implausible (Control)"), 
+                       c("Intercept", "Plausible")), 
+              function(x,y) tidy_lmer(x, y))) %>%
+  arrange(noise)
+
+
+kable(exp3_group_test)
+
+exp3_test_es <- exp3_data %>%
+  filter(trial_type == "Test") %>%
+  mutate(response = as.numeric(response) - 1) %>%
+  group_by(noise, condition, subject) %>%
+  summarise(response = mean(response)) %>%
+  group_by(condition) %>%
+  split(.$noise) %>%
+  map(mes_df) %>%
+  bind_rows(.id = "noise")
+
+kable(exp3_test_es)
+
+
+exp3_test_lm <- glmer(response ~ noise * condition + (1|word) + (1|subject), 
                       family = "binomial",
-                      data = filter(exp2_child_data,trial_type == "Test",
+                      data = filter(exp3_data,trial_type == "Test",
                                     condition != "Implausible (Control)"))
 
-kable_table(exp2_test_lm, c("Intercept", 
+
+kable(tidy_lmer(exp3_test_lm, c("Intercept", 
                             "Noisy", 
                             "Plausible",
-                            "Noisy x Plausible"))
+                            "Noisy x Plausible")))
 ```
 
-```{r exp2_plot_test}
-plotting_test_data <- filter(exp2_group_data,trial_type == "Test") %>%
+```{r exp3_plot_test}
+plotting_test_data <- filter(exp3_group_data, trial_type == "Test") %>%
   mutate(width = ifelse(condition == "Implausible (Control)", .4, .9)) %>%
   mutate(test_type = ifelse(condition == "Implausible (Control)", 
                             "Plausible", "Implausible"))
@@ -278,7 +555,7 @@ ggplot(plotting_test_data,
   geom_linerange(aes(ymin = ci_lower,
                       ymax = ci_upper),
                   size = .8,
-                  show_guide = FALSE,
+                  show.legend = FALSE,
                  position=position_dodge(1)) +
   scale_fill_manual(values = colors[2:3]) +
   geom_hline(aes(yintercept=.5),lty=2)+
@@ -289,20 +566,20 @@ ggplot(plotting_test_data,
                      limits=c(0,1))
 ```
 
-<h3>Analyze Control condition</h3>
-```{r exp2_control}
-control_data <- exp2_child_data %>%
+<h3> Control condition </h3>
+```{r exp3_control}
+control_data <- exp3_data %>%
   filter(trial_type == "Test", noise == "Noisy") %>%
   mutate(condition = factor(condition, levels = c("Plausible", "Implausible", 
                                                   "Implausible (Control)")))
   
 
-exp2_control_lm <-  glmer(response ~ condition + (1|word) + (1|subject), 
+exp3_control_lm <-  glmer(response ~ condition + (1|word) + (1|subject), 
                           family = "binomial",
                           data = control_data)
 
-kable_table(exp2_control_lm, c("Intercept", 
+kable(tidy_lmer(exp3_control_lm, c("Intercept", 
                                "Implausible", 
-                               "Implausible (Control)"))
+                               "Implausible (Control)")))
 ```
 
